tests/type_check/pass/functions/fn_from_int_to_int.pj
fn foo(x: Int) do x end
foo
