tests/type_check/fail/functions/wrong_return_type_fn_int_to_int.pj
fn foo(x: Int): Bool do x end
foo

